Fix my email address (jmcmullan@linuxcare.com is *very* defunct)
git-svn-id: svn://svn.geekisp.com/ezrec/libp5glove/trunk@22 8b6f99d3-f086-0160-f163-15e20f128303

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 The Essential Reality P5 Data Glove Library
 -------------------------------------------
 
-Copyright 2003, Jason McMullan <jmcmulla@linuxcare.com
+Copyright 2003, Jason McMullan <ezrec@hotmail.com>
 
 Introduction
 ------------
