Update version number to 0.3
git-svn-id: svn://svn.geekisp.com/ezrec/libp5glove/trunk@65 8b6f99d3-f086-0160-f163-15e20f128303

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Version 0.3 - Massive rework, new API
+
 Version 0.2 - Fixed x<->z axes, drop bogus IR data, improved p5hand demo
 
 Version 0.1 - First release
