[copyright] Update copyrights, and fix my personal email address
Signed-off-by: Jason S. McMullan <jason.mcmullan@gmail.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-Jason McMullan <ezrec@hotmail.com>
+Jason McMullan <jason.mcmullan@gmail.com>
 Ross Bencina <rossb@audiomulch.com>
 Tim Kreger  <tkreger@bigpond.net.au>
