--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 The Essential Reality P5 Data Glove Library
 -------------------------------------------
 
-Copyright 2003, Jason McMullan <ezrec@hotmail.com>
+Copyright 2003-2010, Jason McMullan <jason.mcmullan@gmail.com>
 
 Introduction
 ------------
